@@ -1,0 +1,7 @@
+from visidata import *
+
+def open_docx(p):
+    import docx
+    document = docx.Document(p.resolve())
+    return open_pyobj(p.name, document)
+#    return TextSheet(document)
