@@ -3,7 +3,11 @@
 ## v0.42
 - async select/unselect
 - aggregator functions on columns
-- .xls
+- loaders for .xls, sqlite .db, dbase .dbf
+- hexdump sheet for .bin
+- load filters
+- 'ge' regex subst
+- Sheet.delete(row)
 
 ## v0.41 (2017-01-18)
 - asynchronous commands (each in its own thread) with
